docker-11: fixed tests where too aggressive use of Integer.valueOf broke test